# feinsum-evaluation

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
feinsum_evaluation/: canonicalization_costs.py  ifj_fe_fej_to_ei.py  metadata.py  utils.py  xre_rij_ej_to_xei.py  xre_rij_xej_to_ei.py
