# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = feinsum_evaluation
description = Evaluation feinsum's performance.
author = Kaushik Kulkarni
author_email = kaushikcfd@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/kaushikcfd/feinsum-evaluation
version = 0.1
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
# package_dir =
#     =feinsum_evaluation

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    tabulate
    numpy


# [options.packages.find]
# where = feinsum_evaluation
# exclude =
#     test

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = feinsum_evaluation.module:function
# For example:
# console_scripts =
#     fibonacci = feinsum_evaluation.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
ignore = E126,E127,E128,E123,E226,E241,E242,E265,N802,W503,E402,N806,N814,N817,W504,B023,B024
max-line-length=85

inline-quotes = "
docstring-quotes = """
multiline-quotes = """
exclude =
    build
    dist
    .eggs
    doc/conf.py
